fix footer z-index

--- a/app/assets/stylesheets/components/business_show.scss
+++ b/app/assets/stylesheets/components/business_show.scss
@@ -75,7 +75,7 @@
 
 .title-photos {
   position: absolute;
-  top: 50%;
+  top: 47%;
   width: 82vw;
   display: flex;
   justify-content: space-between;
