--- a/app/assets/stylesheets/components/footer.scss
+++ b/app/assets/stylesheets/components/footer.scss
@@ -12,7 +12,8 @@
   font-family: 'Headland One', serif;
   font-size: 0.65em;
   font-weight: bold;
-  z-index: -5;
+  background-color: #fad6a5;
+  z-index: 5;
 }
 
 .right-bio-links {
